# llm-tracekit

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  llm-tracekit.code-workspace  pyproject.toml  pyrightconfig.json
.cursor/: README.md  mcp.json
.cursor/commands/: code-checks.md  create-pr.md  self-improve.md  start-ticket.md
.cursor/rules/: file-renaming.mdc
.github/workflows/: lint.yml  publish.yml  test.yml
.specify/memory/: constitution.md
core/: README.md  pyproject.toml
core/src/llm_tracekit/core/: __init__.py  _extended_gen_ai_attributes.py  _metrics.py  _span_builder.py  _utils.py  coralogix.py
core/src/llm_tracekit_core/: __init__.py  _span_builder.py  _span_utils.py  coralogix.py  instrumentation_utils.py  span_builder.py  span_utils.py
core/tests/: test_span_builder.py  test_utils.py
docs/: architecture.md  design-principles.md  overview.md  testing-strategy.md
examples/google_adk/: google_adk_agent.py
guardrails/: LICENSE.md  README.md  __init__.py  constants.py  error.py  guardrails.py  guardrails_span_attributes.py  models.py  pyproject.toml  span_builder.py
guardrails/docs/: getting-started.md  guard-api.md
guardrails/examples/: basic.py  basic_example.py  bedrock.py  bedrock_example.py  bedrock_tools_example.py  custom_financial.py  direct_guard_example.py  gemini.py  gemini_example.py  gemini_tools_example.py  google_adk.py  guard.py  guard_example.py  langchain.py  langchain_example.py  langchain_tools_example.py  litellm_chat.py  litellm_example.py  litellm_tools_example.py  openai_agents.py  openai_agents_example.py  openai_agents_tools_example.py  openai_chat.py  openai_example.py  openai_tools_example.py  simple_chat.py  test_connection.py
guardrails/src/cx_guardrails/: __init__.py  client.py  error.py  span_attributes.py  span_builder.py
guardrails/src/cx_guardrails/models/: _constants.py  _models.py  category.py  request.py  response.py
guardrails/src/guardrails/: __init__.py  client.py  error.py  guardrails.py  guardrails_span_attributes.py  response_converter.py  span_attributes.py  span_builder.py
guardrails/src/guardrails/models/: _models.py  constants.py  enums.py  request.py  response.py
guardrails/tests/: conftest.py  test_guardrails.py  test_models.py
guardrails/tests_guardrails/: conftest.py  test_errors.py  test_guardrails.py  test_models.py  test_response_converter.py
instrumentations/anthropic/: README.md  pyproject.toml  pyrightconfig.json
instrumentations/bedrock/: README.md  pyproject.toml
instrumentations/bedrock/src/llm_tracekit/bedrock/: __init__.py  converse.py  instrumentor.py  invoke_agent.py  invoke_model.py  parsing_utils.py  patch.py  utils.py
instrumentations/bedrock/src/llm_tracekit_bedrock/: __init__.py  converse.py  instrumentor.py  invoke_agent.py  invoke_model.py  parsing_utils.py  patch.py  utils.py
instrumentations/bedrock/tests/: conftest.py  test_converse.py  utils.py
instrumentations/bedrock/tests/cassettes/: test_converse_no_user_attribute_when_missing.yaml  test_converse_user_from_request_metadata.yaml  test_converse_user_id_key_from_request_metadata.yaml
instrumentations/bedrock/tests_bedrock/: conftest.py  test_converse.py  test_invoke_agent.py  test_invoke_model.py  utils.py
instrumentations/gemini/: README.md  pyproject.toml
instrumentations/gemini/src/llm_tracekit/gemini/: __init__.py  instrumentor.py  patch.py  state.py  utils.py
instrumentations/gemini/src/llm_tracekit_gemini/: __init__.py  instrumentor.py  patch.py  state.py  utils.py
instrumentations/gemini/tests/: conftest.py  test_embeddings.py  test_gemini.py
instrumentations/gemini/tests/cassettes/: test_async_embed_content.yaml  test_embed_content_batch.yaml  test_embed_content_no_content.yaml  test_embed_content_single.yaml  test_embed_content_with_dimensionality.yaml
instrumentations/gemini/tests_gemini/: conftest.py  test_gemini.py  utils.py
instrumentations/langchain/: README.md  pyproject.toml
instrumentations/langchain/src/llm_tracekit/langchain/: __init__.py  callback.py  instrumentor.py  package.py  span_manager.py  utils.py
instrumentations/langchain/src/llm_tracekit_langchain/: __init__.py  callback.py  instrumentor.py  span_manager.py  utils.py
instrumentations/langchain/tests/: conftest.py  test_create_agent.py  test_create_agent_stream.py  test_langchain_anthropic.py  test_langchain_bedrock.py  test_langchain_openai.py  test_provider_fallback.py
instrumentations/langchain/tests/cassettes/: test_create_agent_invoke.yaml  test_create_agent_stream.yaml  test_langchain_anthropic_completion.yaml  test_langchain_anthropic_multi_turn.yaml  test_langchain_anthropic_streaming.yaml
instrumentations/langchain/tests_langchain/: conftest.py  test_langchain_bedrock.py  test_langchain_openai.py  utils.py
instrumentations/langgraph/: README.md  (+2 more)
instrumentations/litellm/: README.md  pyproject.toml
instrumentations/litellm/src/llm_tracekit/litellm/: __init__.py  callback.py  instrumentor.py
instrumentations/litellm/src/llm_tracekit_litellm/: __init__.py  callback.py  instrumentor.py
instrumentations/litellm/tests/: conftest.py  test_litellm.py  utils.py
instrumentations/litellm/tests/cassettes/: test_litellm_no_user_attribute_when_missing.yaml  test_litellm_user_from_optional_params.yaml
instrumentations/litellm/tests_litellm/: conftest.py  test_litellm.py  utils.py
llm-tracekit/: pyproject.toml
llm-tracekit/src/llm_tracekit/: __init__.py
llm_tracekit/: __init__.py  coralogix.py  span_builder.py
scripts/: copy-cursor-rules.sh  lint-fix.sh  lint.sh
sdks/guardrails_sdk/: pyproject.toml
sdks/guardrails_sdk/src/guardrails/: __init__.py  main.py
sdks/guardrails_sdk/src/guardrails/fast_api/: models.py  routes.py
sdks/guardrails_sdk/src/guardrails/src/: errors.py  guardrails.py  http_utils.py
sdks/guardrails_sdk/src/guardrails/tests/: test.py
src/: __init__.py
src/guardrails_sdk/: README.md  __init__.py  error.py  guardrails.py  guardrails_span_attributes.py  main.py  models.py  pyproject.toml  span_builder.py
tests/: conftest.py  utils.py
(+318 files in other folders)
