[project]
name = "llm-tracekit-workspace"
version = "0.0.0"
description = "Workspace for LLM Tracekit packages"
requires-python = ">=3.10,<3.14"

[project.optional-dependencies]
ci-core = [
    "llm-tracekit-openai",
    "llm-tracekit-bedrock",
    "llm-tracekit-gemini",
    "llm-tracekit-openai-agents",
    "cx-guardrails",
    "llm-tracekit-langchain",
    "llm-tracekit-litellm",
]

[dependency-groups]
dev = [
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-vcr>=1.0.2",
    "ruff>=0.4.0",
    "types-PyYAML>=6.0.0",
    "assertpy>=1.1",
    "pyyaml>=6.0",
    "brotli>=1.1.0",
    "respx>=0.21.0",
    "langchain-openai>=0.3.0",
    "langchain-aws>=0.2.0",
]

[tool.uv.workspace]
members = [
    "llm-tracekit",
    "core",
    "guardrails",
    "instrumentations/openai",
    "instrumentations/openai_agents",
    "instrumentations/bedrock",
    "instrumentations/gemini",
    "instrumentations/litellm",
    "instrumentations/langchain",
]

[tool.uv.sources]
llm-tracekit-core = { workspace = true }
llm-tracekit-openai = { workspace = true }
llm-tracekit-bedrock = { workspace = true }
llm-tracekit-gemini = { workspace = true }
llm-tracekit-litellm = { workspace = true }
llm-tracekit-openai-agents = { workspace = true }
cx-guardrails = { workspace = true }
llm-tracekit-langchain = { workspace = true }

[tool.mypy]
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "core/src:instrumentations/openai/src:instrumentations/bedrock/src:instrumentations/gemini/src:instrumentations/litellm/src:instrumentations/langchain/src:instrumentations/openai_agents/src:guardrails/src"

