[project]
name = "llm-tracekit"
version = "2.0.0"
description = "Meta-package for LLM Tracekit - OpenTelemetry instrumentations for LLM providers."
readme = "README.md"
authors = [
    { name="Coralogix Ltd.", email="info@coralogix.com" },
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.14"
dependencies = [
    "llm-tracekit-core>=1.0.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: OpenTelemetry :: Instrumentations",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
openai = ["llm-tracekit-openai>=1.0.0"]
bedrock = ["llm-tracekit-bedrock>=1.0.0"]
gemini = ["llm-tracekit-gemini>=1.0.0"]
# litellm is excluded due to dependency conflicts - install llm-tracekit-litellm directly
openai-agents = ["llm-tracekit-openai-agents>=1.0.0"]
guardrails = ["cx-guardrails>=1.0.0"]
langchain = ["llm-tracekit-langchain>=1.0.0"]

[project.urls]
homepage = "https://coralogix.com"
repository = "https://github.com/coralogix/llm-tracekit.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.hatch.build.targets.sdist]
only-include = []

[dependency-groups]
dev = [
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-vcr>=1.0.2",
    "ruff>=0.4.0",
    "types-PyYAML>=6.0.0",
    "assertpy>=1.1",
    "pyyaml>=6.0",
    "brotli>=1.1.0",
    "respx>=0.21.0",
    "langchain-openai>=0.3.0",
    "langchain-aws>=0.2.0",
]

[tool.uv.workspace]
members = [
    "core",
    "guardrails",
    "instrumentations/openai",
    "instrumentations/openai_agents",
    "instrumentations/bedrock",
    "instrumentations/gemini",
    "instrumentations/langchain",
    "instrumentations/google-adk",
]

[tool.uv.sources]
llm-tracekit-core = { workspace = true }
llm-tracekit-openai = { workspace = true }
llm-tracekit-bedrock = { workspace = true }
llm-tracekit-gemini = { workspace = true }
llm-tracekit-openai-agents = { workspace = true }
llm-tracekit-google-adk = { workspace = true }
cx-guardrails = { workspace = true }
llm-tracekit-langchain = { workspace = true }

[tool.mypy]
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "core/src:instrumentations/openai/src:instrumentations/bedrock/src:instrumentations/gemini/src:instrumentations/langchain/src:instrumentations/openai_agents/src:instrumentations/google-adk/src:guardrails/src"
