[project]
name = "llm-tracekit"
version = "2.0.0"
description = "Meta-package for LLM Tracekit - OpenTelemetry instrumentations for LLM providers."
readme = "../README.md"
authors = [
    { name="Coralogix Ltd.", email="info@coralogix.com" },
]
license = "Apache-2.0"
license-files = ["../LICENSE"]
requires-python = ">=3.10,<3.14"
dependencies = [
    "llm-tracekit-core>=1.0.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: OpenTelemetry :: Instrumentations",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
openai = ["llm-tracekit-openai>=1.0.0"]
bedrock = ["llm-tracekit-bedrock>=1.0.0"]
gemini = ["llm-tracekit-gemini>=1.0.0"]
litellm = ["llm-tracekit-litellm>=1.0.0"]
openai-agents = ["llm-tracekit-openai-agents>=1.0.0"]
guardrails = ["cx-guardrails>=1.0.0"]
langchain = ["llm-tracekit-langchain>=1.0.0"]

[project.urls]
homepage = "https://coralogix.com"
repository = "https://github.com/coralogix/llm-tracekit.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]

[tool.hatch.build.targets.sdist]

[tool.uv.sources]
llm-tracekit-core = { workspace = true }
llm-tracekit-openai = { workspace = true }
llm-tracekit-bedrock = { workspace = true }
llm-tracekit-gemini = { workspace = true }
llm-tracekit-litellm = { workspace = true }
llm-tracekit-openai-agents = { workspace = true }
cx-guardrails = { workspace = true }
llm-tracekit-langchain = { workspace = true }

