[project]
name = "coralogix-guardrails-sdk"
version = "1.0.0"
description = "Guardrails SDK for Python"
readme = "README.md"
authors = [
    { name="Coralogix Ltd.", email="info@coralogix.com" },
]
license = "Apache-2.0"
license-files = ["LICENSE.md"]
requires-python = ">=3.10, <3.14"
dependencies = [
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.0.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]




[project.urls]
homepage = "https://coralogix.com"
repository = "https://github.com/coralogix/guardrails-sdk.git"


[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=1.0.0",
    "pytest-vcr>=1.0.2",
    "pyyaml>=6.0.2",
    "ruff>=0.9.7",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# The package is guardrails_sdk, and since pyproject.toml is in the package directory,
# we need to explicitly tell hatchling about the package structure
# Build should be run from src/ directory, so packages = ["guardrails_sdk"] points to src/guardrails_sdk/
packages = ["guardrails_sdk"]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["wrapt", "httpx.mock"]
ignore_missing_imports = true

[tool.hatch.build.targets.sdist]
only-include = [
    "*.py",
    "README.md",
    "LICENSE.md",
    "py.typed",
]